2000-04-07  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-show-buddies): changed apply to funcall
	(tnt-set-buddy-status): now storing the time the buddy became
	idle, rather than the amount of time they've been idle.
	(tnt-buddy-idle): now computing the time they've been idle based
	on when they became idle.
	(tnt-build-buddy-buffer): now making sure idle is non-nil before
	comparing it to 0.

2000-04-06  John Jannotti  <jj@lcs.mit.edu>

	* toc.el (toc-handle-receive): Fix some indentation.  Sorry I'm so 
	anal.
	(toc-normalize): Try, try again.  Rewrote much more simply, maybe
	faster.  This time it definitely works in both Emacs and XEmacs.

	* tnt.el (tnt-handle-goto-url): Added
	(tnt-open): bind the goto-url function to tnt-handle-goto-url

	* toc.el: Reorganized to reflect the ordering of documentation in
 	PROTOCOL
	(toc-evil): Added
	(toc-add-permits): Added
	(toc-add-denies): Added
	(toc-chat-evil): Added
	(toc-get-info): Added
	(toc-set-info): Added
	(toc-set-idle): Added
	(toc-handle-receive): Stop sending cmd for GOTO_URL, since we now
	handle it correctly.

	* tnt.el (tnt-handle-error): Added catchall clause to notice weird
 	errors

2000-04-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-leave-chat): now using completing-read with
	the list of chats you're in (the cdrs from tnt-chat-alist)
	(tnt-online-buddies-collection): changed name from
	tnt-buddy-collection, so that it's clear that this gives just the
	buddies who are currently online.
	(tnt-send-text-as-chat-invitation): added (completion-ignore-case t)
	(tnt-send-text-as-chat-whisper): added (completion-ignore-case t)

	* README: added tnt-leave-chat info.

2000-04-06  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-inhibit-key-bindings): Added keybinding for
 	tnt-leave-chat.
	(tnt-show-help): Added help for tnt-leave-chat
	(tnt-chat-buffer-name): Made comment into docstring
	(tnt-chat-buffer): Made comment into docstring
