@@ -1,3 +1,12 @@
+2000-04-07  Neil Picciotto  <neilp@orion.infoseek.com>
+
+	* tnt.el (tnt-buddy-idle): now returning a string of the form
+	"1h12m" or "34m".  
+	(tnt-build-buddy-buffer): since idle is now a string, we can't
+	compare it to 0, but if it's not nil, it should always be a string
+	to display.  also, changed a complicated nesting of ifs into an
+	equivalent but simpler cond.
+
 2000-04-07  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
 	* tnt.el (tnt-show-buddies): changed apply to funcall
